# Edu_institution_management

./: .env  Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
server/: models.py  views.py
